--- a/ChooseVideoCodec.ui
+++ b/ChooseVideoCodec.ui
@@ -38,7 +38,11 @@
       </widget>
      </item>
      <item>
-      <widget class="QSpinBox" name="bitrate"/>
+      <widget class="QSpinBox" name="bitrate">
+       <property name="maximum">
+        <number>999999999</number>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
