--- a/ChooseFileFormat.ui
+++ b/ChooseFileFormat.ui
@@ -42,6 +42,13 @@
     </layout>
    </item>
    <item>
+    <widget class="QCheckBox" name="rewrite">
+     <property name="text">
+      <string>Rewrite output file</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
       <widget class="QLabel" name="label_2">
