--- a/ChooseVideoCodec.ui
+++ b/ChooseVideoCodec.ui
@@ -33,7 +33,7 @@
      <item>
       <widget class="QLabel" name="label_5">
        <property name="text">
-        <string>Maximum bitrate:</string>
+        <string>Maximum bitrate, kb/s:</string>
        </property>
       </widget>
      </item>
@@ -51,7 +51,7 @@
      <item>
       <widget class="QLabel" name="label_2">
        <property name="text">
-        <string>Bitrate:</string>
+        <string>Bitrate, kb/s:</string>
        </property>
       </widget>
      </item>
@@ -69,7 +69,7 @@
      <item>
       <widget class="QLabel" name="label_6">
        <property name="text">
-        <string>Minimum bitrate:</string>
+        <string>Minimum bitrate, kb/s:</string>
        </property>
       </widget>
      </item>
